mobile overflow fix attempt

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 @import "variables.scss";
 
-.hide-overlay {
-    overflow-x: hidden;
-}
+// .hide-overlay {
+//     overflow-x: hidden;
+// }
 
 .border-divider {
     width: 100%;
