--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -11,6 +11,7 @@
 
 .hide-overlay {
     overflow-x: hidden;
+    position: relative;
 }
 html, body {
     overflow-x: hidden;
